; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpiolib.c_gpiod_set_raw_array_value.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpiolib.c_gpiod_set_raw_array_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_desc = type { i32 }
%struct.gpio_array = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gpiod_set_raw_array_value(i32 %0, %struct.gpio_desc** %1, %struct.gpio_array* %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.gpio_desc**, align 8
  %8 = alloca %struct.gpio_array*, align 8
  %9 = alloca i64*, align 8
  store i32 %0, i32* %6, align 4
  store %struct.gpio_desc** %1, %struct.gpio_desc*** %7, align 8
  store %struct.gpio_array* %2, %struct.gpio_array** %8, align 8
  store i64* %3, i64** %9, align 8
  %10 = load %struct.gpio_desc**, %struct.gpio_desc*** %7, align 8
  %11 = icmp ne %struct.gpio_desc** %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %4
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %5, align 4
  br label %21

15:                                               ; preds = %4
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.gpio_desc**, %struct.gpio_desc*** %7, align 8
  %18 = load %struct.gpio_array*, %struct.gpio_array** %8, align 8
  %19 = load i64*, i64** %9, align 8
  %20 = call i32 @gpiod_set_array_value_complex(i32 1, i32 0, i32 %16, %struct.gpio_desc** %17, %struct.gpio_array* %18, i64* %19)
  store i32 %20, i32* %5, align 4
  br label %21

21:                                               ; preds = %15, %12
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i32 @gpiod_set_array_value_complex(i32, i32, i32, %struct.gpio_desc**, %struct.gpio_array*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
